@@ -4,27 +4,29 @@
 * @copyright	http://www.xoops.org/ The XOOPS Project
 * @copyright	XOOPS_copyrights.txt
 * @copyright	http://www.impresscms.org/ The ImpressCMS Project
-* @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
-* @package		core
-* @since		XOOPS
-* @author		http://www.xoops.org The XOOPS Project
-* @author	   Sina Asghari (aka stranger) <pesian_stranger@users.sourceforge.net>
-* @version		$Id$
+* @license	http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+* @package	core
+* @since	XOOPS
+* @author	http://www.xoops.org The XOOPS Project
+* @author	Sina Asghari (aka stranger) <pesian_stranger@users.sourceforge.net>
+* @version	$Id$
 */
 
 if(!defined('ICMS_ROOT_PATH')) {die('ICMS root path not defined');}
 if(!defined("XOOPS_FOOTER_INCLUDED"))
 {
-	/** Set the constant XOOPS_FOOTER_INCLUDED to 1 - this file has been included */
-  define("XOOPS_FOOTER_INCLUDED",1);
+	global $sess_handler, $icmsPreloadHandler, $xoopsLogger, $xoopsOption, $icmsConfigMetaFooter, $xoopsTpl, $icmsModule, $icmsUser;
 
-$_SESSION['ad_sess_regen'] = false;
-if(isset($_SESSION['sess_regen']) && $_SESSION['sess_regen'])
-{
-	$sess_handler->icms_sessionOpen(true);
-	$_SESSION['sess_regen'] = false;
-}
-else {$sess_handler->icms_sessionOpen();}
+	/** Set the constant XOOPS_FOOTER_INCLUDED to 1 - this file has been included */
+	define("XOOPS_FOOTER_INCLUDED",1);
+
+	$_SESSION['ad_sess_regen'] = false;
+	if(isset($_SESSION['sess_regen']) && $_SESSION['sess_regen']) {
+		$sess_handler->icms_sessionOpen(true);
+		$_SESSION['sess_regen'] = false;
+	} else {
+		$sess_handler->icms_sessionOpen();
+	}
 
 	// ################# Preload Trigger beforeFooter ##############
 	$icmsPreloadHandler->triggerEvent('beforeFooter');
@@ -42,7 +44,7 @@ else {$sess_handler->icms_sessionOpen();}
 			$xoopsTpl->display('db:'.$xoopsOption['template_main']);
 		}
 		if(!isset($xoopsOption['show_rblock'])) {$xoopsOption['show_rblock'] = 0;}
-		themefooter($xoopsOption['show_rblock'], $footer, $google_analytics);
+		//themefooter($xoopsOption['show_rblock'], $footer, $google_analytics);
 		xoops_footer();
 	}
 	else
@@ -50,10 +52,10 @@ else {$sess_handler->icms_sessionOpen();}
 		// RMV-NOTIFY
 		if (is_object($icmsModule) && $icmsModule->getVar('hasnotification') == 1 && is_object($icmsUser)) {
 			/** Require the notifications area */
-      require_once 'include/notification_select.php';
+			require_once 'include/notification_select.php';
 		}
-    /** @todo Notifications include/require clarification in footer.php - if this is included here, why does it need to be required above? */
-    /** Include the notifications area */
+		/** @todo Notifications include/require clarification in footer.php - if this is included here, why does it need to be required above? */
+		/** Include the notifications area */
 		include_once ICMS_ROOT_PATH . '/include/notification_select.php';
 
 		if(!headers_sent())
